@@ -156,5 +156,18 @@ test_main (void)
 	      "97536710 1F67D1CF 9BCCBF2F 3D239534"
 	      "FA509E70 AAC851AE 01AAC68D 62F86647"
 	      "2660"); /* s */
-}
 
+  /* Non-standard ecdsa using curve25519. Not interop-tested with
+     anything else. */
+  test_ecdsa (&nettle_curve25519,
+	      "1db511101b8fd16f e0212c5679ef53f3"
+	      "323bde77f9efa442 617314d576d1dbcb", /* z */
+	      "aa2fa8facfdc3a99 ec466d41a2c9211c"
+	      "e62e1706f54037ff 8486e26153b0fa79", /* k */
+	      SHEX("e99df2a098c3c590 ea1e1db6d9547339"
+		   "ae760d5331496119 5d967fd881e3b0f5"), /* h */
+	      " 62cbc248a549765 3641d1cbedda2733"
+	      "a7357821dca43727 d8081448d608030d", /* r */
+	      " 14726f472f44f84 63fe82c2712231cd"
+	      "937f2aecdcfe9c39 e2ab0d68c390ccf4"); /* s */
+}
